--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,8 +16,14 @@ status-website:
   baseUrl: /playerdata-status
   logoUrl: https://raw.githubusercontent.com/ball-hayden/playerdata-status/master/static/playerdata-symbol.jpg
   name: PlayerData Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [Github repository](https://github.com/koj-co/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/koj-co/upptime)
+  introTitle: "PlayerData Service Status"
+  introMessage: |
+    <p>Current status for PlayerData services.</p>
+
+    <p>
+      Something wrong? Contact
+      <a href="mailto:support@playerdata.co.uk">support@playerdata.co.uk</a>
+    </p>
   navbar:
     - title: Status
       href: /
